resources/app-sre/glitchtip-production/glitchtip.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    glitchtip: glitchtip-web
  name: glitchtip-route
spec:
  host: "glitchtip.production.devshift.net"
  port:
    targetPort: "8000"
  to:
    kind: Service
    name: glitchtip-web
    weight: 100
  wildcardPolicy: None
